--- a/ui/Squire-UI.css
+++ b/ui/Squire-UI.css
@@ -8,7 +8,19 @@ body {
   }
   
 iframe {
-    width:100%;
+    width: 100%; 
+    border: 1px #919191 solid;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    padding: 7px 8px;
+    color: #333;
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-position: right center;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    outline: none;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
 }
   
 .menu .item {
@@ -34,14 +46,7 @@ iframe {
     transform:rotateY(180deg)
 }
 
-.menu {
-    -webkit-touch-callout:none;
-    -webkit-user-select:none;
-    -khtml-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none
-}
+
 
 .menu .group .item:hover, .menu .item:first-child:hover {
 	border-left: 3px #55ACEE solid;
